# aerosol_mechanism

./: .gitignore  Advion MS for SI.xlsx  Analysis.ipynb  README.md  pyproject.toml
MicroPython code/ZL-09/: ZL-09a.py
MicroPython code/ZL-11/: ZL-11.py  ZL-11b.py
MicroPython code/ZL-25/: ZL-25.py  ZL-25b.py  ZL-25c.py
MicroPython code/ZL-30/: ZL-30d.py
MicroPython code/ZL-31/: ZL-31.py
MicroPython code/ZL-40/: ZL-40.py  ZL-40b.py  ZL-40d.py  ZL-40f.py  ZL-40g.py  ZL-40i.py
MicroPython code/ZL-55/: ZL-55b.py
ZL-09/: ZL-09-testing.py  ZL-09g.py
ZL-10/: zl-10a.py
ZL-11/: ZL-11a.py  ZL-11c.py  ZL-11d.py
ZL-25/: ZL-25a.py  ZL-25d.py
ZL-30/: ZL-30a.py  ZL-30b.py  ZL-30c.py
ZL-40/: ZL-40c.py  ZL-40e.py  ZL-40h.py
macrocycle/: macrocycle_spectra.py
src/models/: model_lda.py
