[project]
name = "aerosol_mechanism"
version = "0.1.0"
description = "Accelerated investigation of complex reaction cascades via programmable aerosol chemistry coupled to online mass spectrometry"
requires-python = "~=3.12.0"
dependencies = [
    "ipykernel>=6.30.0",
    "ipywidgets>=8.1.7",
    "jax==0.4.31",
    "jupyterlab>=4.4.5",
    "numpyro>=0.18.0",
    "scipy>=1.16.0",
    "seaborn>=0.13.2",
]
